<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_edit_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_infor_staff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_remove_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_staff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#B6BBC4"
            android:text="@string/close_dialog"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>