<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/purple_500"
            android:elevation="15dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_staff"
            android:textColor="@color/white"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_id_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:digits="0123456789"
            android:inputType="phone"
            android:hint="@string/id_staff"
            android:padding="15dp"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:hint="@string/name_staff"
            android:padding="15dp"
            android:textColor="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department_name"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sp_department_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_background"
            android:padding="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_name"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/sp_status_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>